@@ -1,5 +1,8 @@
 1999-07-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
+	* DefObject.h (setBit, getField): Use unsigned long instead of
+	unsigned. (int is smaller than void * on alphaev56-dec-osf4.0.)
+
 	* LispArchiver.m ([LispArchiver_c -createEnd]): Set inStreamZone to
 	nil when inhibitLoadFlag is set.
 
